--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^16.9.56",
+    "firebase-admin": "^9.4.0",
+    "nookies": "^2.5.0",
+    "typescript": "^4.0.5",
     "@firebase/app": "^0.7.0",
     "antd": "^4.16.13",
     "firebase": "^8.10.0",
