--- a/package.json
+++ b/package.json
@@ -9,24 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react": "^16.9.56",
-    "firebase-admin": "^9.4.0",
-    "nookies": "^2.5.0",
-    "typescript": "^4.0.5",
     "@firebase/app": "^0.7.0",
+    "@types/react": "^17.0.21",
     "antd": "^4.16.13",
-    "firebase": "^8.10.0",
+    "firebase": "^9.0.2",
+    "firebase-admin": "^9.11.1",
     "next": "11.1.2",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
-    "react-firebaseui": "^5.0.2"
+    "reactfire": "^4.1.1",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@firebase/auth": "^0.17.2",
-    "@types/react": "17.0.20",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.2"
+    "@firebase/auth": "^0.17.2"
   }
 }
