--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@firebase/app": "^0.7.0",
     "@types/react": "^17.0.21",
     "antd": "^4.16.13",
+    "eslint": "^7.32.0",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
     "next": "11.1.2",
